[build-system]
requires = ["setuptools", "wheel", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NiChart_Viewer"
version = "1.0.1"
description = "Viewer to visualize neuroimaging chart (NiChart) image descriptors and biomarkers"
authors = [
    "Guray Erus <guray.erus@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>",
    "George Aidinis <George.Aidinis@pennmedicine.upenn.edu"
]
keywords = ["neuro-imaging", "MRI", "big data"]
readme = "README.md"
homepage = "https://github.com/CBICA/NiChart_Viewer"
repository = "https://github.com/CBICA/NiChart_Viewer"
documentation = "https://github.com/CBICA/NiChart_Viewer"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]

include = ["NiChart_Viewer/shared/*", "NiChart_Viewer/**/*.ui", "NiChart_Viewer/**/*.yapsy-plugin", "*.png"]
packages = [
    {include = "NiChart_Viewer"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
briefcase = "^0.3.5"
cycler = "^0.10.0"
joblib = "^1.0.1"
MarkupSafe = "2.0.1"
matplotlib = "^3.4.2"
nibabel = "^3.2.1"
numpy = "^1.21"
pandas = "2.0.1"
Pillow = "^9.0.0"
pyparsing = "^2.4.7"
PyQt5 = "^5.15.4"
PyQt5_Qt5 = "^5.15.2"
PyQt5_sip = "^12.9.0"
dill = "^0.3.4"
future = "^0.18.2"
python_dateutil = "^2.8.1"
pytz = "^2021.1"
scikit_learn = "^1.0.2"
scipy = "^1.6.3"
seaborn = "0.12.2"
six = "^1.16.0"
statsmodels = "^0.13.0"
Yapsy = "^1.12.2"
Jinja2 = "^2.11.3"
pytest = "7.0.1"
pytest-qt = "4.0.2"

[tool.poetry.urls]
homepage = "https://github.com/CBICA/NiChart_Viewer"
repository = "https://github.com/CBICA/NiChart_Viewer"
documentation = "https://github.com/CBICA/NiChart_Viewer"

[tool.poetry.scripts]
NiChart_Viewer = "NiChart_Viewer:main"

[tool.briefcase]
project_name = "NiChart_Viewer"
name = "[NiChart_Viewer]"
bundle = "com.example"
version = "0.1"
description = "NiChart Data Viewer"
authors = [
    "Guray Erus <guray.erus@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>"
]
keywords = ["neuro-imaging", "MRI", "big data"]
readme = "README.md"
icon = "NiChart_Viewer/resources/icon"
installer_icon = "NiChart_Viewer/resources/icon"
include = ["NiChart_Viewer/**/*.ui", "NiChart_Viewer/**/*.yapsy-plugin", "*.png"]
packages = [
    {include = "NiChart_Viewer"}
]

[tool.briefcase.app.NiChart_Viewer.macOS]
requires = []

[tool.briefcase.app.NiChart_Viewer.linux]
requires = []
system_requires = []

[tool.briefcase.app.NiChart_Viewer.windows]
requires = []
